--- a/docs-preview/package.json
+++ b/docs-preview/package.json
@@ -50,7 +50,104 @@
         "language": "markdown",
         "path": "./snippets/dfm.json"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Markdown",
+      "order": 20,
+      "properties": {
+        "markdown.styles": {
+          "type": "array",
+          "default": [],
+          "description": "%markdown.styles.dec%",
+          "scope": "resource"
+        },
+        "markdown.preview.breaks": {
+          "type": "boolean",
+          "default": false,
+          "description": "%markdown.preview.breaks.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.linkify": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.linkify%",
+          "scope": "resource"
+        },
+        "markdown.preview.fontFamily": {
+          "type": "string",
+          "default": "-apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'Ubuntu', 'Droid Sans', sans-serif",
+          "description": "%markdown.preview.fontFamily.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.fontSize": {
+          "type": "number",
+          "default": 14,
+          "description": "%markdown.preview.fontSize.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.lineHeight": {
+          "type": "number",
+          "default": 1.6,
+          "description": "%markdown.preview.lineHeight.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.scrollPreviewWithEditor": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.scrollPreviewWithEditor.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.scrollPreviewWithEditorSelection": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.scrollPreviewWithEditorSelection.desc%",
+          "deprecationMessage": "%markdown.preview.scrollPreviewWithEditorSelection.deprecationMessage%"
+        },
+        "markdown.preview.markEditorSelection": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.markEditorSelection.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.scrollEditorWithPreview": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.scrollEditorWithPreview.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.doubleClickToSwitchToEditor": {
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown.preview.doubleClickToSwitchToEditor.desc%",
+          "scope": "resource"
+        },
+        "markdown.preview.openMarkdownLinks": {
+          "type": "string",
+          "default": "inPreview",
+          "description": "%configuration.markdown.preview.openMarkdownLinks.description%",
+          "scope": "resource",
+          "enum": [
+            "inPreview",
+            "inEditor"
+          ],
+          "enumDescriptions": [
+            "%configuration.markdown.preview.openMarkdownLinks.inPreview%",
+            "%configuration.markdown.preview.openMarkdownLinks.inEditor%"
+          ]
+        },
+        "markdown.trace": {
+          "type": "string",
+          "enum": [
+            "off",
+            "verbose"
+          ],
+          "default": "off",
+          "description": "%markdown.trace.desc%",
+          "scope": "window"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
